# Grok-Voice-Studio

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-TW.md  final.md  package.json  plan.md  spec.md  test.md  todos.md
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  events.rs  lib.rs  log_store.rs  main.rs  state.rs
apps/desktop/src-tauri/src/services/: generation.rs  mod.rs  project_service.rs
apps/desktop/src/components/: CharacterPanel.tsx  CustomVoicesPanel.tsx  ExportPanel.tsx  FloatingWindow.tsx  HomePage.tsx  InspectorPanel.tsx  LogPanel.tsx  OnboardingModal.tsx  ScriptEditor.tsx  SegmentTable.tsx  SettingsModal.tsx  SfxLibraryPanel.tsx  SfxLibraryWindow.tsx  WorkflowGuide.tsx
apps/desktop/src/hooks/: useApiRetry.ts  useAudioPlayer.ts  useAutoSave.ts  useGeneration.ts  useLogs.ts  useStoryConvert.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/templates/: index.ts
crates/audio/: Cargo.toml
crates/audio/src/: ffmpeg.rs  lib.rs  subtitle.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  parser.rs  project.rs  retry_notify.rs  sfx.rs  story.rs  text_split.rs  timeline.rs  tts_text.rs
crates/core/tests/: integration.rs
crates/providers/xai/: Cargo.toml
crates/providers/xai/src/: chat.rs  custom_voices.rs  lib.rs  provider.rs  retry.rs  streaming_tts.rs
crates/storage/: Cargo.toml
crates/storage/src/: cache.rs  keyring_store.rs  lib.rs  settings.rs  sfx_store.rs  sfx_wav.rs
crates/storage/tests/: cache_test.rs
examples/: demo_dialogue.zh.txt  demo_story.zh.txt
examples/templates/: README.md  daily_friends.zh.txt  english_cafe.en.txt  fairy_tale.zh.txt  news_broadcast.zh.txt  shortvideo_hook.zh.txt
