[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/providers/xai",
    "crates/audio",
    "crates/storage",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Grok Voice Studio"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tracing = "0.1"