[package]
name = "grok-voice-xai"
version.workspace = true
edition.workspace = true

[dependencies]
grok-voice-core = { path = "../../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
base64 = "0.22"
urlencoding = "2"